--- a/src/App.css
+++ b/src/App.css
@@ -4,22 +4,6 @@
     width: 100vw;
     height: 100vh;
 }
-.AppHeader{
-    height: 50px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 4px 20px 4px 12px;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.15);
-}
-.AppFooter{
-height: 50px;
-display: flex;
-justify-content: space-evenly;
-align-items: center;
-border-top: 1px solid rgba(0, 0, 0, 0.15);
-
-}
 .SideMenuAndPageContent{
     display: flex;
     flex: 1;
@@ -32,8 +16,11 @@ border-top: 1px solid rgba(0, 0, 0, 0.15);
 }
 .SideMenuVertical{
     height: 100%;
-    color: #000000;
+   
 }
 .PageContent{
-    padding-left: 12px;
+    display: flex;
+    flex: 1;
+    flex-direction: column ;
+    /* padding-left: 12px; */
 }
