--- a/src/App.css
+++ b/src/App.css
@@ -24,3 +24,19 @@
     flex-direction: column ;
     /* padding-left: 12px; */
 }
+.form-container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start; /* Align to the left */
+    width: 50%; /* Adjust the width as needed */
+    padding-left: 360px; /* Optional: Add padding to create some space from the left */
+  }
+  
+  
+  .form-row {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start; /* Align form rows to the left */
+  }
+  /* Style for all input fields */
+
